[package]
name = "klask"
version = "1.0.0"
authors = ["Michał Gniadek <mgniadek@interia.pl>"]
edition = "2018"
license = "MIT"
description = "Automatically create GUI for clap apps"
repository = "https://github.com/MichalGniadek/klask"
categories = ["gui"]
keywords = ["clap", "gui", "ui", "cli", "egui"]

[features]
default = ["rfd"]

[dependencies]
Inflector = { version = "0.11", default-features = false }
cansi = "2.2"
clap = { version = "3", default-features = false, features = [
    "std",
    "derive",
    "unicode",
] }
clap_derive = { version = "3" }
uuid = { version = "1.3", features = ["v4"] }
eframe = { version = "*", default-features = false, features = [
    "default_fonts", "glow"
] }
linkify = "0.9"
thiserror = "1.0"
rfd = { version = "0.11", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.3", features = ["v4", "js"] }

#[target.'cfg(not(any(target_os = "windows", target_arch = "wasm32")))'.dependencies]
#native-dialog = "0.6"
#
## Should make dialogs look better
#[target.'cfg(target_os = "windows")'.dependencies]
#native-dialog = { version = "0.6", features = [
#    "windows_dpi_awareness",
#    "windows_visual_styles",
#] }
